--- a/pages/blog/2021-03-11-travels.mdx
+++ b/pages/blog/2021-03-11-travels.mdx
@@ -9,11 +9,11 @@
 
 > When a thing beckons you to explore it without telling you why or how, this is not a red herring; it’s a map. – Gina Greenlee
 
-The September 2020 version of me was sitting in his room, totally conceded to the inevitability of another half-year in lockdown. After all, since march has been shut down everything completely - there's literally nothing that would change about that, given the ongoing state of the pandemic. Right?
+The September 2020 version of me was sitting in his room, totally conceded to the inevitability of another half-year in lockdown. After all, all the exciting things lin my life have been shut down since March - nothing would change about that, given the ongoing state of the pandemic. Right?
 
-6 months and 3 countries later, I have zipped down and across and around the world - the most I've ever travelled in this time frame, all during a global pandemic. Nothing about this was planned. My passport was expiring soon, and I never knew where I'd be in the next two months.
+6 months and 3 countries later, I've zipped down and across and around the world - the most I've ever travelled in this time frame, all during a global pandemic. Nothing about this was planned. My passport was expiring soon, and I never knew where I'd be in the next two months.
 
-In fact, the only constant here was the ever-present unknown and never-ending chaos that defined my journey.  
+In fact, the only constant that defined my journey was the ever-present unknown and never-ending chaos.  
 Q: Where do you see yourself in two months?  
 A: Haha good one.
 
@@ -23,40 +23,46 @@ This place is cozy. Getting too cozy.
 
 Wake up, food, school, food, walk, school, food, sleep.
 
-My being is literally atrophying. We are in this together. One more day, let's endure this. Endure one more day.
+My being was literally atrophying. We are in this together. One more day, let's endure this. Endure one more day.
 
 Looking forward, an online term is inevitable. Endure this online term, and we'll talk soon. Let's meet up after all this, okay?
 
-The next two terms will be online only. Each of us has an important part to play in limiting the risk of COVID-19 and maintaining safety both on and off campus.
+The next two terms will be online only. "Each of us has an important part to play in limiting the risk of COVID-19 and maintaining safety both on and off campus."
 
-Surely there has something more meaningful to do than this.
+Surely there's a better use of my time than this.
 
 Ding! You've got mail. Title: [Hack Lodge] Micro-campus for projects this fall!  
 A [school 2.0](https://school2point0.com/); a micro-campus to learn and create together with 30 young people filled with curiosity and kindness this fall. There will be a rigorous COVID protocol and it will operate as a bubble with no outside interactions.
 
-I decide I had to leave this place and go to School 2.0. I interview with Marley and Raffi, pester them a bit, convince my parents, buy a plane ticket, and head off to Truchas, New Mexico.
+I decided I had to leave this place and go to School 2.0. I interviewed with organizers Marley and Raffi, pestered them a bit, convinced my parents, bought a plane ticket, and headed off to Truchas, New Mexico.
 
 ## Desolate New Mexico
 
-On the plane ride I finally come to grasp the utter spontaneity of my decision. I'm going to a place I've never been to, by myself, in a pandemic, not knowing any of the residents beforehand. I could get abducted for my organs and no one will know. Oh well, let's see how it goes.
+On the plane ride I finally came to realize the utter spontaneity of my decision. I was going to a place I've never been to, by myself, in a pandemic, not knowing any of the residents beforehand. I could get mugged for my organs and no one will know. Oh well, let's see how it goes.
 
-It goes very well. A warm desert surrounded by sharp mountains and covered with foreign plants greets my arrival. Everything was new; the land, the house, and especially the people. For once in a long time, I was with people who learned and built things out of an innate curiosity and passion, instead of a fear or desire to get ahead in finite rat-races such as grades or prestige.
+It went very well. A warm desert surrounded by sharp mountains and covered with foreign plants greeted my arrival. Everything was new; the land, the house, and especially the people. For once in a long time, I was with [people](https://bio.school2point0.com/) who learn and build from an innate curiosity and passion, instead the desire to get ahead in finite rat-races such as grades or prestige. Unconventional pathways were the norm: plenty of people around my age had started a company, did research, or simply dropped out of college to do their own thing.
 
-We lived in the middle of nowhere, but [the house](https://www.truchaspeaksplace.com/) was never quiet or empty. For me, as an only child who spent much time in solitude, this was transformative.
+We lived in the middle of nowhere, but [the house](https://www.truchaspeaksplace.com/) was never quiet or empty. To me as an an only child who spent much time in solitude, this was transformative.
 
 I did a lot of new firsts here, including:
 
 - cooking for 28 people
 - climbing the tallest mountain in New Mexico
 - playing the recorder and eating fries on said mountain
-- getting on a hot air balloon
+- flying in a hot air balloon
 - doing a winter midnight balcony hackathon
 - playing with power lasers
 
-So it turns out that my impulsive decision was one of the best choices I've ever made. I wasn't sure if this was a fluke or a rule, so I decided to live more spontaneously to find out.
+So it turned out that my impulsive decision was one of the best choices I've ever made. I wasn't sure if this was a fluke or a rule, so I decided to live more spontaneously to find out.
 
-Two months and many great memories later, the program came to an end. I asked my new friend Geffen if I could go live with him in SF, and he said yes. And so 4 of us started a road trip West to California.
+Two months and many great memories later, the program came to an end. I asked my new friend Geffen if I could go live with him in SF, and he said yes. And so 4 of us started out on a road trip West to California.
 
 ## Golden Bay Area
 
-## Unfamiliar Taipei
+4 days of driving took us around the Grand Canyon, through the Las Vegas strip, and over Death Valley. This was a modern, Western version of the Wu Cheng'en classic Journey to the West, minus the fights with monsters from Hell. We were planning on seeing a Delta 4 Heavy rocket launch from Vandenburg but the launch got cancelled.
+
+During the next 3 months I lived with Geffen in a community house called [Topos](https://topos.house). It's a quiet place compared to the constant ruckus at School 2.0. The people are very intellectual, and are always excited to learn and discuss. For me, this was proof enough that you can make plenty of amazing friends outside of the college experience.
+
+For 10 days I hacked with the Hebbia team at an AirBnb. It was one of the most intense work experiences I've had - I'd wake up at 10am and work non-stop until 2am. The CEO pushed me hard to stay up and I was constantly exhausted. It wasn't the most productive time, and I've
+
+## Exciting Taipei
