--- a/pages/blog/2021-01-27-stocks.mdx
+++ b/pages/blog/2021-01-27-stocks.mdx
@@ -91,7 +91,9 @@ Stock trading can be stressful, especially if you have a lot on the line. My exp
 
 ### Options trading
 
-I traded exclusively on stocks on Wealthsimple when I started my experiment. Later, I transferred my funds to a Questrade account so that I could start trading options. There are some [cool guides](https://www.optionseducation.org/referencelibrary/brochures-literature/page-assets/options-strategies-quick-guide.aspx) on options trading, but in essence options are higher risk contracts that speculate on volatility. Call options let you buy a stock at a price, and put options let you sell a stock at a price. If a stock goes up sharply, I would make significantly more from a call option rather than from holding the stock. As such, options can provide a ton of profit if exercised properly, but can also bring an account to 0 (or billions in the red, case [Melvin Capital](https://markets.businessinsider.com/news/stocks/short-sellers-sitting-on-19-billion-of-losses-on-gamestop-data-shows-2021-1-1030020684)). If you want to limit your risk, I'd advise against making options a significant portion of your account.
+I traded exclusively on stocks on Wealthsimple when I started my experiment. Later, I transferred my funds to a Questrade account so that I could start trading options. This is a good time to put in a subtle shill for my Questrade referral code **405925357448044**: get $25 up to $250 cash when you open and fund any self-directed account if you initially deposit $1,000.
+
+There are some [cool guides](https://www.optionseducation.org/referencelibrary/brochures-literature/page-assets/options-strategies-quick-guide.aspx) on options trading, but in essence options are higher risk contracts that speculate on volatility. Call options let you buy a stock at a price, and put options let you sell a stock at a price. If a stock goes up sharply, I would make significantly more from a call option rather than from holding the stock. As such, options can provide a ton of profit if exercised properly, but can also bring an account to 0 (or billions in the red, case [Melvin Capital](https://markets.businessinsider.com/news/stocks/short-sellers-sitting-on-19-billion-of-losses-on-gamestop-data-shows-2021-1-1030020684)). If you want to limit your risk, I'd advise against making options a significant portion of your account.
 
 ---
 
