--- a/pages/blog/2021-03-11-travels.mdx
+++ b/pages/blog/2021-03-11-travels.mdx
@@ -1,4 +1,4 @@
-import { Carousel } from "antd";
+import { Carousel, Typography } from "antd";
 
 export const metadata = {
   title: "6 Months and 3 Countries",
@@ -118,7 +118,7 @@ A few fantasies broke for me during my time in SF:
 - people are pushing deep tech and applying innovations to every aspect of our lives
 - there is a social safety net that is paid for by big tech
 
-I did contracting work for a Chinese company, then full stack dev work as the third employee in a budding NLP startup. I lived in a company AirBnB, did a 10 day hackathon, and [cooked a lot](/cooking). I got a job offer from Google and a spot in a startup accelerator in Taiwan.
+I did contracting work for a Chinese [game publishing company](http://idreamsky.com/), then full stack dev work as third employee in a budding [NLP startup](https://hebbia.ai/). I lived in a company AirBnB, did a 10 day hackathon, and [cooked a lot](/cooking). I got a job offer from Google and a spot in a startup accelerator in Taiwan.
 
 <Carousel autoplay>
   <img src="/images/2020-03-11-travels/sf1.jpg" />
