--- a/pages/blog/2021-03-25-crossroads.mdx
+++ b/pages/blog/2021-03-25-crossroads.mdx
@@ -9,7 +9,7 @@ export const metadata = {
 
 ![paths](/images/2021-03-25-crossroads/paths.jpg)
 
-The question of the year - should I drop what I'm doing, reject all social and career obligations, and fully embark on a self-directed journey of reflection and exploration?
+The question of the year - should I drop what I'm doing, reject all social and career norms, and fully embark on a self-directed journey of reflection and exploration?
 
 I'm thinking this after I did some napkin math to discover that I could theoretically live off my savings alone for at least 5 years, if I'm frugal in a cheap city like Taipei. Now that resource scarcity can't be an excuse anymore, I'm finally forced to think about the big question.
 
