--- a/pages/blog/2021-04-28-group-houses.mdx
+++ b/pages/blog/2021-04-28-group-houses.mdx
@@ -1,3 +1,5 @@
+import { List } from "antd";
+
 # Under One Roof
 
 Recently, there's been a lot of talk about living in group houses. By definition, they aren't anything new or complicated by any means. These co-living arrangements are just that - a group of people live together under one roof. Like geodes, they come in different arrangements and sizes, and there's something out there for everyone.
@@ -20,15 +22,21 @@ To be clear, I am in no way trying to gate-keep the awesome opportunity of group
 
 When finding housemates, I find that using [The Damn Test](/blog/2021-04-15-damn-test) to be a helpful litmus test on whether I align with someone and would like to live with them.
 
-## The good part
+## Joining one
 
-Ok, so being in a good house is paramount to the experience. How do I make sure I'm in the right house? And if I find the right house, how can I be accepted to join as a resident?
+Ok, so being in a good house is paramount to having a good experience. How do I make sure I'm in the right house? And if I find the right house, how can I be accepted to join as a resident?
 
-After chatting with many friends from Waterloo who had the same questions, it seems that there are two main problems here:
+Many friends from Waterloo reached out to me with the same questions, and it seems that there are two main problems here:
 
 1. It's hard to find out about these houses in the first place
 2. It's hard to join these houses because they are very space-limited
 
-TODO
+To find out about houses, you have to be either well connected or lucky. I wasn't well connected when I found about School 2.0: I heard about it by chance from a hackathon mailing list, and I only joined the hackathon after a stranger cold-emailed me about the opportunity in the first place (thanks Avery!).
+
+There's also an element of luck involved when you try to get a spot in a house, since interviews can only sample a small part of what someone is like, and sometimes the house is already full by the time you hear about it. To be honest, there aren't many group houses at all in Canada at the moment.
+
+The trick to guarantee that you are in your favorite house is actually to start one. Currently it seems that there is much more demand than supply - if you want to join a house and can't, then surely there are so so many others who feel the same. Just this past month, 6 people reached out to me, asking me about any upcoming group living arrangements. If there's enough interest, I'm thinking of building something to connect people to form houses in Canada. Feel free to drop me a message if you'd like to see something like this.
 
 ## Some houses
+
+If you're looking for existing houses to live in or draw inspiration from, I've put together an archive of the good houses I know of, you can check it out [here](/houses).
