fix links on sidebar

--- a/pages/blog/2020-01-06-takeaways.mdx
+++ b/pages/blog/2020-01-06-takeaways.mdx
@@ -59,4 +59,4 @@ I’m very happy with my first term in SE. There’s a common saying in the prog
 ![Winter Pic](https://lh3.googleusercontent.com/_uuksMIsRXTNtOzkSwG5mtbNYYiuHt4V12vArM3NtCgFMrcnaCrsYEJh3jKnlIQaswJzg9EO4tNf5xDxfpfoEFq-BjaNJx3RY2nlub4JYnoM0uhd_N4Lo-EafGcDT0QP6844HfyY_p7Ga9dcAJkWrW9-cl3ZBKWR3cKq1EzkTgU0EA2jCY30PdI6h9UKLsD8zce1TnP5LJ85P__vIFQcjn7VbL_jCeH392k8uZdwhfmW168JViqs8rh1plnVyZYQX7b_zAoNEiKVguiRKOS68umJoBiqvnmI_L0pp033g6pu4tObX3gBCXBneWVBTQMLld5nAIfjzNzvvQATKh2-HRbYlsC-yt0_6mxb_N4w2S_H2DjlFg3ZTfbJiCJvVKqNuh8AZ6KhWnw3A8ZmRJ_RfD-YB1U5YE3YeCOFmSvY4MwwGmrtTiIRu15XT0JpHEDcZjDkq4nhpTP25OEeLqpIl01yFGH4sucsYcOl2TpG6yw5sxhqiI-FGZ36Bm2Ut_sAl1FAiLR-ZqcvBWL3ecWRVYZGQyj506Vn5S89u63VpKHx4iEe02BpXrJo_1HnY5sJVz93DqzsEMzSeOQbJgrp0aWzd8fkKtiPoHBFA8uh7AJaDkO91FgOGcXRaCKQZ5cpeOqFNR0qJ2FuYUvmvNLrM0ufoAEyenG_g1e8AKNNQeTqKJaLsMwe1nECvBrdLA=w1292-h970-no?authuser=0)
 _Winter shots from my room_
 
-If you have any specific questions regarding the application process or the program itself, feel free to reach me on [Twitter](https://twitter.com/_JonathanXu).
+If you have any specific questions regarding the application process or the program itself, feel free to reach me on [Twitter](https://twitter.com/jonxuxu).
