--- a/pages/blog/2020-10-03-startups.mdx
+++ b/pages/blog/2020-10-03-startups.mdx
@@ -95,4 +95,4 @@ If you are looking for an internship, hopefully I have convinced you consider wo
 ![Funny Description](https://miro.medium.com/max/2400/1*sJeJLLWR8lQMcx1rqlnpxg.png)
 _I got to build the careers page of the website; here’s what you need to get hired, according to the placeholder job descriptions_
 
-I’m always down for a chat, and you can reach me on [Twitter](https://twitter.com/_JonathanXu) if you’re interested in chatting about Fractal, want more tips on finding cool internships as a student, or anything at all!
+I’m always down for a chat, and you can reach me on [Twitter](https://twitter.com/jonxuxu) if you’re interested in chatting about Fractal, want more tips on finding cool internships as a student, or anything at all!
