--- a/pages/blog/2021-04-15-damn-test.mdx
+++ b/pages/blog/2021-04-15-damn-test.mdx
@@ -22,4 +22,4 @@ _B_: So, I finally got into YCombinator \*pause\*
 _A_: ... oh nice!  
 _B_: and I'm gonna be interviewing for the Thiel Fellowship next week \*long pause\*
 
-So A finds name brands like YCombinator, Google, and the Thiel Fellowship very impressive. Does that say something about what they care about? These are the hot, shiny collectibles that fit nicely on a resume. This might give you a sense for what motivates the person.
+So B finds name brands like YCombinator, Google, and the Thiel Fellowship very impressive. Does that say something about what they care about? These are the hot, shiny collectibles that fit nicely on a resume. This might give you a sense for what motivates the person.
