--- a/pages/blog/2020-12-31-reflections.mdx
+++ b/pages/blog/2020-12-31-reflections.mdx
@@ -7,7 +7,7 @@ export const metadata = {
 
 # Reflections on 2020
 
-#### Dec 31, 2020
+#### 12/31/20
 
 ![Image of the bay](/images/2020-12-31-reflections/nightFrancisco.jpg)
 
@@ -51,8 +51,8 @@ There some actionable tasks that I'll want to try this year:
 
 1. Write more
 2. Read more
-3. Go to way more totally different environments and places
-4. Get comfortable sharing my ideas openly
+3. Go to a lot of totally different environments and places
+4. Get comfortable with sharing my ideas openly
 
 I haven't put numbers on these goals, to encourage myself to focus on the purpose and theme behind what I'll do, instead of just the superficial counts and statistics. We'll do a postmortem next year and see how this approach works out.
 
