--- a/pages/blog/2020-10-03-startups.mdx
+++ b/pages/blog/2020-10-03-startups.mdx
@@ -1,11 +1,11 @@
 export const metadata = {
-  title: "The Case For Interning at Tech Startups",
+  title: "The case for interning at tech startups",
   url: "2020-10-03-startups",
   date: 1601683200,
   length: 13,
 };
 
-# The Case For Interning at Tech Startups
+# The case for interning at tech startups
 
 #### 10/03/20
 
