--- a/pages/blog/2021-02-20-china.mdx
+++ b/pages/blog/2021-02-20-china.mdx
@@ -1,11 +1,11 @@
 export const metadata = {
-  title: "Working in Chinese Tech",
+  title: "Working in Chinese tech",
   url: "2021-02-20-china",
   date: 1613786898,
   length: 11,
 };
 
-# Working in Chinese Tech
+# Working in Chinese tech
 
 #### 02/20//21
 
