--- a/pages/blog/2021-03-11-travels.mdx
+++ b/pages/blog/2021-03-11-travels.mdx
@@ -1,13 +1,13 @@
 import { Carousel, Typography } from "antd";
 
 export const metadata = {
-  title: "6 Months and 3 Countries",
+  title: "6 months and 3 countries",
   url: "2021-03-11-travels",
   date: 1615471780,
   length: 10,
 };
 
-# 6 Months and 3 Countries
+# 6 months and 3 countries
 
 #### 03/11/21
 
