--- a/pages/blog/2021-03-25-crossroads.mdx
+++ b/pages/blog/2021-03-25-crossroads.mdx
@@ -1,11 +1,11 @@
 export const metadata = {
-  title: "The Crossroads",
+  title: "The crossroads",
   url: "2021-03-25-crossroads",
   date: 1616655370,
   length: 1,
 };
 
-# The Crossroads
+# The crossroads
 
 #### 03/25/21
 
