--- a/pages/blog/2021-04-28-group-houses.mdx
+++ b/pages/blog/2021-04-28-group-houses.mdx
@@ -1,17 +1,17 @@
 import { List } from "antd";
 
 export const metadata = {
-  title: "Under One Roof",
+  title: "Under one roof",
   url: "2021-04-28-group-houses",
   date: 1619575809,
   length: 6,
 };
 
-![Cover](/images/2021-04-28-group-houses/cover.jpg)
-
-# Under One Roof
+# Under one roof
 
 #### 04/28/21
+
+![Cover](/images/2021-04-28-group-houses/cover.jpg)
 
 Recently, there's been a lot of talk about living in group houses. By definition, they aren't anything new or complicated by any means. These co-living arrangements are just that - a group of people live together under one roof. Like geodes, they come in different arrangements and sizes, and there's something out there for everyone.
 
@@ -51,3 +51,5 @@ The trick to guarantee that you are in your favorite house is actually to start 
 ## Some houses
 
 If you're looking for existing houses to live in or draw inspiration from, I've put together an archive of the good houses I know of, you can check it out [here](/houses).
+
+---
