--- a/pages/blog/2020-01-06-takeaways.mdx
+++ b/pages/blog/2020-01-06-takeaways.mdx
@@ -1,11 +1,11 @@
 export const metadata = {
-  title: "Takeaways from 1A Software Engineering at Waterloo",
+  title: "Takeaways from 1A software engineering at Waterloo",
   url: "2020-01-06-takeaways",
   date: 1578268800,
   length: 6,
 };
 
-# Takeaways from 1A Software Engineering at Waterloo
+# Takeaways from 1A software engineering at Waterloo
 
 #### 01/06/20
 
