--- a/pages/blog/2021-01-27-stocks.mdx
+++ b/pages/blog/2021-01-27-stocks.mdx
@@ -1,11 +1,11 @@
 export const metadata = {
-  title: "1 Year of Stonks",
+  title: "1 year of stonks",
   url: "2021-01-27-stocks",
   date: 1611813387,
   length: 12,
 };
 
-# 1 Year of Stonks
+# 1 year of stonks
 
 #### 01/27/21
 
