--- a/pages/blog/2020-07-25-on-hackathons.mdx
+++ b/pages/blog/2020-07-25-on-hackathons.mdx
@@ -81,7 +81,7 @@ As someone who has made lifelong memories from attending over 40 hackathons, I'm
 
 I'm pretty certain that hackathons as we knew it are going to be die for good. Prepare to say goodbye to most of the large, extravagent events that you see on [old youtube](https://www.youtube.com/watch?v=FcZhyLZlIA8). Grab those fidget spinners and little swag trinkets while you can, because it looks like companies are already starting to realize that throwing money to promotions and sponsor prizes usually does not do much to promote their sales or talent pool.
 
-On the other hand, the downfall of hackathons may help retire the mindset of building short term and building for show. I think we'll see a rise in the more sustainable model of creating usable products for users that have real impact. During the pandemic I have already noticed a sharp increase in interest towards longer term ventures such as MVP labs, monthlong hackathons, and communal living arrangements / hackerhouses. Having done all those recently, I can say for sure that I've learned a lot more, made better memories, and built more meaningful relationships than I have during my past 3 years of attending hackathons. Some of the most proming projects, such as [Gather Town](https://gather.town/), [Fractal](/blog/2020-10-03-startups), [LiPoker](https://lipoker.io/), and [Dark Forest](https://zkga.me/) were all spawned from these events over the past year.
+On the other hand, the downfall of hackathons may help retire the mindset of building short term and building for show. I think we'll see a rise in the more sustainable model of creating usable products for users that have real impact. During the pandemic I have already noticed a sharp increase in interest towards longer term ventures such as MVP labs, monthlong hackathons, and [communal living arrangements](/houses) / hackerhouses. Having done all those recently, I can say for sure that I've learned a lot more, made better memories, and built more meaningful relationships than I have during my past 3 years of attending hackathons. Some of the most proming projects, such as [Gather Town](https://gather.town/), [Fractal](/blog/2020-10-03-startups), [LiPoker](https://lipoker.io/), and [Dark Forest](https://zkga.me/) were all spawned from these events over the past year.
 
 <center>
   <img src="/images/2020-07-25-on-hackathons/school2.gif" alt="school 2.0" />
@@ -90,7 +90,7 @@ On the other hand, the downfall of hackathons may help retire the mindset of bui
 _If you're looking to make friendships and great memories, there are other things
 that are better for that_
 
-If you were considering attending a hackathon, I'd still recommend you do them if you've never done them before. It's a totally unique situation where you get to build whatever, however, without needing to worry about the restrictions of real life. And there are still great moments to meet cool builders. I would warn against doing them repeatedly, since there is a diminishing return in terms of new experiences. As someone who is a lot more disenchanted from hackathons since the glory days, I would recommend you to look to participating in communal living arrangments and building [longer-term](/projects/noisy) personal projects. The world is big and there are many cooler things to do than hackathons these days!
+If you were considering attending a hackathon, I'd still recommend you do them if you've never done them before. It's a totally unique situation where you get to build whatever, however, without needing to worry about the restrictions of real life. And there are still great moments to meet cool builders. I would warn against doing them repeatedly, since there is a diminishing return in terms of new experiences. As someone who is a lot more disenchanted from hackathons since the glory days, I would recommend you to look to participating in communal living arrangments and building longer-term [personal projects](/projects). The world is big and there are many cooler things to do than hackathons these days!
 
 Sincerely,
 
