--- a/pages/projects/curius.mdx
+++ b/pages/projects/curius.mdx
@@ -8,7 +8,7 @@ import { Carousel } from "antd";
 
 I think that there's a strong future for collaboration-based browsing to curate the best parts of the internet. The human elemnts of sharing the little curius (_wheeze_) little things we find on the digital beach seem to bring a lot more hidden gems when compared to the traditional SEO approach. So check us out, and happy browsing!
 
-## Promo images
+## Promo materials
 
 <Carousel autoplay>
   <img src="/images/projects/curius/promo1.png" />
