--- a/pages/projects/noisy.mdx
+++ b/pages/projects/noisy.mdx
@@ -2,6 +2,8 @@ import { Carousel } from "antd";
 
 # Noisy
 
+### November 2020 - January 2021
+
 ![cover img](/images/projects/noisy/banner.png)
 _The landing page. I'm pretty happy with how the dark cyberpunk vibe turned out!_
 
@@ -38,7 +40,7 @@ My big takeaway from this project is that music generation has now matured to a 
 
 Github: https://github.com/JonathanXu1/noisy-bot
 
-## Promo images
+## Promo materials
 
 <Carousel autoplay>
   <img src="/images/projects/noisy/description1.png" />
