--- a/pages/blog/2021-07-30-setbacks.mdx
+++ b/pages/blog/2021-07-30-setbacks.mdx
@@ -15,6 +15,8 @@ But then great opportunities manifested out of this decay. I decided that I woul
 
 Thanks to my Google internship and intial cofounder falling through, I had the time and energy to catch this opportunity to explore startups with a nice amount of funds, and a dear friend whom I deeply appreciate and repsect.
 
-This pattern of things falling through to make way for even better experiences seems to be more of a norm than exception in my life. I rejected the Shopify Dev Degree program for software engineering at Waterloo, which gave me a huge amount of freedom to explore work at mulitple companies. I lost my initial internship offer due to covid, which allowed me time to do an amazing startup experience at Fractal. I took a year off school which put me back on the academic timeline, but gave me a chance to explore the world of places and learn of possibilities I've never even knew were possible.
+This pattern of things falling through to make way for even better experiences seems to be more of a norm than exception in my life. I rejected the Shopify Dev Degree program for software engineering at Waterloo, which gave me a huge amount of freedom to explore work at mulitple companies. I lost my initial internship offer due to covid, which allowed me time to do an amazing startup experience at Fractal and Trofi. I took a year off school which set me back on the academic timeline, but gave me a chance to explore the world and learn of possibilities I never even knew existed. I dare say, I would not be where I am today without these failures and disappointments.
 
 It seems like there is no perfect plan out there. Looking back, I realize I've been worrying too much about individual setbacks, instead of appreciating the role they could play in the bigger picture. Obviously I don't mean to say that the closing of doors will guarantee the opening of new ones. It's just that sometimes good things can only happen when bad things happen, and vice versa. So try not to stress yourself too much over something you cannot control and can't prove is objectively bad. The best opportunities come from a willingness to try new things, and adapt to changing circumstances.
+
+---
