--- a/pages/blog/2021-08-12-unlucky.mdx
+++ b/pages/blog/2021-08-12-unlucky.mdx
@@ -1,5 +1,5 @@
 export const metadata = {
-  title: "Unluckiest week fo my life",
+  title: "Unluckiest week of my life",
   url: "2021-08-12-unlucky",
   date: "2021-08-12",
   length: 4,
