--- a/pages/blog/2021-08-01-coziness.mdx
+++ b/pages/blog/2021-08-01-coziness.mdx
@@ -17,6 +17,8 @@ This time, I pass through very casually, almost like a local. I had lived here f
 
 I am still traveling alone, with Google Maps and my backpack as companions, but I feel totally different. Repetition, even just for the second time, has changed the experience. I think this is a large part of what makes something feel cozy and comfortable to us. Our homes, the schools we grew up in, our longtime friends, that old toy we dig up from decades ago - give us a strong sense of coziness and nostalgia, because we've interacted with them a lot.
 
-This shows how we add meaning to objects and places through the power of association - by interacting with them under a shared feeling or experience, these things become more special to us. Looking at the angular terminal building, I am reminded of the emotions I felt of exploring this city, the excitement of anticipation and the bright and liveley nights I spent with new friends.
+We add meaning to objects and places through the power of association - by interacting with them under a shared feeling or experience, these things become more special to us. Looking at the angular terminal building, I am reminded of the emotions I felt of exploring this city, the excitement of anticipation and the bright and liveley nights I spent with new friends.
 
 I think I now understand why people carry totems, souvenirs, and photos along with them. Using the power of association, you can imbue within these trinkets the memories and feelings of special times in your life, and take them with you.
+
+---
