--- a/pages/blog/2021-08-12-unlucky.mdx
+++ b/pages/blog/2021-08-12-unlucky.mdx
@@ -11,7 +11,7 @@ export const metadata = {
 
 This week was probably the unluckiest week of my life. Thanks to a flurry of social activities for the past few days, I spent up all my energy and amassed a lot of sleep debt. So then two bad things happened:
 
-1. I lost almost all my money. Being sleep deprived, stressed, and generally not in the best mental state, I fell victim to a (really sophisticated) crypto phishing scam. I lost almost all my crypto holdings, which was around $70,000 at the time. Objectively it's not an astronomical sum of money, but it felt much worse because it represented almost all my net worth. As someone who tries to be cautious and wise with their money, I felt horrified and ashamed to see my savings disappear in a matter of seconds.
+1. I lost almost all my money. Being sleep deprived, stressed, and generally not in the best mental state, I fell victim to a (really sophisticated) crypto phishing scam and lost all my crypto holdings. Objectively it's not an astronomical sum of money, but it felt much worse because it represented almost all my net worth. As someone who tries to be cautious and wise with their money, I felt horrified and ashamed to see my savings disappear in a matter of seconds.
 
 2. I caught a breakthrough case of covid. I've already been fully vaccinated, but I think my sleep deprivation and stress from (1) lowered my immune response to actually catch the virus. Despite taking all the necessary precautions and avoiding the virus over the past year, I finally catch it right after something very bad happened to me. I'm now self-isolating so that I won't be spreading it to others.
 
