--- a/pages/blog/2021-12-08-writing-more.mdx
+++ b/pages/blog/2021-12-08-writing-more.mdx
@@ -1,11 +1,11 @@
 export const metadata = {
-  title: "5 tips on writing more",
+  title: "4 tips on writing more",
   url: "2021-12-08-writing-more",
   date: "2021-12-08",
   length: 1,
 };
 
-# 5 tips on writing more
+# 4 tips on writing more
 
 #### 12/08/21
 
@@ -13,6 +13,5 @@ Just like with any skill, it seems like there is no secret way to improving your
 
 1. Jot down your thoughts when you get inspired. It gets very hard to remember them later on.
 2. Write what you want, when you want, in whatever format you want.
-3. Be okay with publishing something that doesn't feel complete :)
+3. Be okay with publishing something that doesn't feel complete. Not all your thoughts have to be neatly wrapped for someone to find some value in hearing about them!
 4.
-5.
