--- a/pages/blog/2020-12-31-reflections.mdx
+++ b/pages/blog/2020-12-31-reflections.mdx
@@ -35,7 +35,7 @@ Writing these things down, I'm struck by how random and unpredictable these even
 
 I think can be a few takeaways from what I have experienced this year:
 
-1. Spontaneity and uncertainty strongly correlate with the diversity of one's life experiences, and the speed at which one learns lessons and ideas
+1. Spontaneity and uncertainty strongly correlate with the diversity of one's life experiences, and the rate at which one learns lessons and ideas
 2. Life is unpredictable, but you can always make it more unpredictable by acting in ways you normally would not
 3. The future contains planned, unknown and truly unknown events. Truly unknown events are the ones that you do not even know can happen to you in life
 4. There is so much to do and explore, and my life seems to pass by faster by the year. The question of whether or not I will find true purpose and fulfillment by the time I die seems to be a real concern that cannot be ignored
