--- a/pages/projects/polygon.mdx
+++ b/pages/projects/polygon.mdx
@@ -6,9 +6,9 @@ import { Carousel } from "antd";
 
 ![cover img](/images/projects/polygon/banner.png)
 
-During my time in Taiwan, when I was having troulbe deciphering the QR code looking traditional Chinese written on signs everywhere. It reminded me of my time learning Chinese with friends I met in New Mexico, when we played first-person walking tour videos set in foreign cities like Shanghai and translated the text we saw on signs as we went.
+During my time in Taiwan, when I was having trouble deciphering the QR code looking traditional Chinese written on signs everywhere. It reminded me of my time learning Chinese with friends I met in New Mexico, when we played first-person walking tour videos set in foreign cities like Shanghai and translated the text we saw on signs as we went.
 
-So the idea for [Polygon](https://polygon.video) was born: what if we could click on text and captions elements within the video player itself, and listen, translate and learn them natively? Within the Polygon player, the user just needs to pause the video when they want to interact with a sign. Then they click on the bubbles that pop up over detected texts, and interact with the translation boxes that show up within the video.
+So the idea for [Polygon](https://polygon.video) was born: what if we could click on text and caption elements within the video player itself, and listen, translate and learn them natively? Within the Polygon player, the user just needs to pause the video when they want to interact with a sign. Then they click on the bubbles that pop up over detected texts, and interact with the translation boxes that show up within the video.
 
 The project has gotten over 1000 users and served over 1.5tb of content, which is pretty cool. Some Youtubers and language learning sites expressed interest as well, so hopefully Polygon or something similar can make language learning a much more natural and fun experience in the future.
 
