--- a/pages/projects/trofi.mdx
+++ b/pages/projects/trofi.mdx
@@ -27,7 +27,7 @@ For the next two weeks we travelled to the food terminal at unusal hours, to lea
 <Carousel autoplay>
   <img src="/images/projects/trofi/inside.jpg" />
   <img src="/images/projects/trofi/apples.jpg" />
-  <img src="/images/projects/trofi/cucumbers.jpg" />
+  <img src="https://i.ibb.co/6Z3hqcx/cucumbers.jpg" />
 </Carousel>
 <br />
 
@@ -40,7 +40,7 @@ By this time, we had a pretty solid grasp about the inner owrkings of a food ter
 <Carousel autoplay>
   <img src="/images/projects/trofi/night.jpg" />
   <img src="/images/projects/trofi/herbs.jpg" />
-  <img src="/images/projects/trofi/night.jpg" />
+  <img src="https://i.ibb.co/F3RwB6z/night.jpg" />
   <img src="/images/projects/trofi/plants.jpg" />
 </Carousel>
 <br />
