--- a/pages/blog/2021-03-25-crossroads.mdx
+++ b/pages/blog/2021-03-25-crossroads.mdx
@@ -13,7 +13,7 @@ export const metadata = {
 
 The question of the year - should I drop what I'm doing, reject all social and career norms, and fully embark on a self-directed journey of reflection and exploration?
 
-I'm thinking this after I did some napkin math to discover that I could theoretically live off my savings alone for at least 5 years, if I'm frugal in a cheap city like Taipei. Now that resource scarcity can't be an excuse anymore, I'm finally forced to think about the big question.
+I'm thinking this after I did some napkin math to discover that I could theoretically live off my savings alone for at least 5 years, if I'm frugal in a cheap city like Taipei. Now that I can't use scarcity as an excuse anymore, I'm finally forced to think about the big question.
 
 If I avoid it even now, then that probably means I'll forever be finding new excuses to look away from the elephant in the room: why seek security in a future that isn't even yours? I'm already 20, it doesn't seem hard to continue living the same way for another 20, 40, or 60 years.
 
