adding photos and webring

--- a/pages/blog/2020-07-25-on-hackathons.mdx
+++ b/pages/blog/2020-07-25-on-hackathons.mdx
@@ -79,7 +79,7 @@ As someone who has made lifelong memories from attending over 40 hackathons, I'm
 
 ## What's next
 
-I'm pretty certain that hackathons as we knew it are going to be die for good. Prepare to say goodbye to most of the large, extravagent events that you see on [old youtube](https://www.youtube.com/watch?v=FcZhyLZlIA8). Grab those fidget spinners and little swag trinkets while you can, because it looks like companies are already starting to realize that throwing money to promotions and sponsor prizes usually does not do much to promote their sales or talent pool.
+I'm pretty certain that hackathons as we knew it are going to be die for good. Prepare to say goodbye to most of the large, extravagent events that you see on [old youtube](https://www.youtube.com/watch?v=FcZhyLZlIA8). Grab those fidget spinners and little swag trinkets while you can, because it looks like companies are already starting to realize that throwing money to promotions and sponsor prizes usually does not do much to promote their sales or talent pool. All one needs to do to confirm this is to walk along the sponsorship aisle of a hackathon that's been running for a few years. Comparing across a few years, there is usually a spike in sponsors by the third to 5th event before the tables gradually dwindle out over the years. For example, it was hard to navigate through PennApps III, as two sets of hallways over 50m long were chock full of eager companies vying to get new hires. Now the same section occupies at most half a length of hallway.
 
 On the other hand, the downfall of giant hackathons may help retire the mindset of building short term and building for show. I think we'll see a rise in the more sustainable model of creating usable products for users that have real impact. During the pandemic I have already noticed a sharp increase in interest towards longer term ventures such as MVP labs, smaller-scale monthlong hackathons, and [communal living arrangements](/houses) / hackerhouses. Having done all of those recently, I can say for sure that I've learned a lot more, made better memories, and built more meaningful relationships than I have during my last 3 years attending hackathons. Some of the most proming projects, such as [Gather Town](https://gather.town/), [Fractal](/blog/2020-10-03-startups), [LiPoker](https://lipoker.io/), and [Dark Forest](https://zkga.me/) were all spawned from these events over the past year.
 
