--- a/pages/blog/2021-03-25-crossroads.mdx
+++ b/pages/blog/2021-03-25-crossroads.mdx
@@ -17,6 +17,6 @@ I'm thinking this after I did some napkin math to discover that I could theoreti
 
 If I avoid it even now, then that probably means I'll forever be finding new excuses to look away from the elephant in the room: why seek security in a future that isn't even yours? I'm already 20, it doesn't seem hard to continue living the same way for another 20, 40, or 60 years.
 
-Is this what it means to take a leap of faith? And how do those usually end up?
+Is this what it means to take a leap of faith? And how do those usually pan out?
 
 ---
