--- a/pages/blog/2021-08-01-coziness.mdx
+++ b/pages/blog/2021-08-01-coziness.mdx
@@ -9,16 +9,14 @@ export const metadata = {
 
 #### 08/01/21
 
-I am walking through JFK airport today, and the whole place feels very different from the last time I was here. Sure, it's a bit busier, but overal nothing physically changed in the past two months. What changed was the level of coziness I feel this second time.
+I am walking through JFK airport when I was struck by a weird feeling of easiness. I caught me by surprise because I never expected to feel this way as I'm always slightly on edge when traveling.
 
-I first travelled through here June, confused and lost, swept on a multi-leg homecoming journey (Taipei -> Istanbul -> New York -> Buffalo -> Toronto). All I wanted to do was get home since I had no ties to New York. The place felt otherworldly and unfamiliar; I was a speck in a confusing mass of people, concrete, and noise.
+I remember when I first came here in June, confused and lost as I was swept on a multi-leg homecoming journey (Taipei -> Istanbul -> New York -> Buffalo -> Toronto). The place felt otherworldly and unfamiliar; I was a speck in a confusing mass of people, concrete, and noise.
 
-This time, I pass through very casually, almost like a local. I had lived here for a month, gotten an apartment, made many friends, and started getting comfortable with the city. Now, I feel ambivalent, perhaps even nostalgic, as a thin layer of familiarity grows on the buildings I say hello to for a second time.
+This time, I pass through quite casually, almost like a local. I feel ambivalent, perhaps even nostalgic, as a thin layer of familiarity grows on the buildings I say hello to for a second time. I had lived here for a month, gotten an apartment, made many friends, and started getting comfortable living in the city. I walk through the building alone, yet I no longer feel alone. Now, the space has developed a sort of softness and warmth. 
 
-I am still traveling alone, with Google Maps and my backpack as companions, but I feel totally different. Repetition, even just for the second time, has changed the experience. I think this is a large part of what makes something feel cozy and comfortable to us. Our homes, the schools we grew up in, our longtime friends, that old toy we dig up from decades ago - give us a strong sense of coziness and nostalgia, because we've interacted with them a lot.
+Reflecting on how I've felt in spaces as I travelled in the past, I've concluded that the difference to me is whether I have friends in the area. It's the memories, the shared experiences and the knowledge that there are people who care about you that turns a harsh city into a place I'd like to call home. We add meaning to objects and places through the power of association - by interacting with them under a shared feeling or experience, these things become more special to us. Looking at the angular terminal building, I am reminded of the emotions I felt of exploring this city, the excitement of anticipation and the bright and liveley nights I spent with new friends.
 
-We add meaning to objects and places through the power of association - by interacting with them under a shared feeling or experience, these things become more special to us. Looking at the angular terminal building, I am reminded of the emotions I felt of exploring this city, the excitement of anticipation and the bright and liveley nights I spent with new friends.
-
-I think I now understand why people carry totems, souvenirs, and photos along with them. Using the power of association, you can imbue within these trinkets the memories and feelings of special times in your life, and take them with you.
+Now that the novelty of exploring foreign places has worn off a bit for me, I'm beginning to realize that there are, subjectively speaking, only a few places that I hold dear to my heart. It doesn't matter where I am, so long as I'm with friends and I'm able to persue some level of self-actualization. There's no place like home.
 
 ---
